fix Sidebar width -> Canvas is flickering && Conditional rendering on sidebar component

--- a/src/views/DesignEditor/components/Panels/PanelItem/style.module.css
+++ b/src/views/DesignEditor/components/Panels/PanelItem/style.module.css
@@ -15,7 +15,7 @@
   cursor: pointer;
   position: absolute;
   right: 26px;
-  top: 9px;
+  top: 0px;
   z-index: 1;
 }
 .mainContainer {
