--- a/src/views/DesignEditor/components/Panels/PanelsList/style.module.css
+++ b/src/views/DesignEditor/components/Panels/PanelsList/style.module.css
@@ -1,5 +1,5 @@
 .panelListSection {
-  width: 320px !important;
+  width: 100% !important;
   height: 100%;
   overflow-x: visible;
   background-color: white;
