--- a/src/views/DesignEditor/components/Panels/style.module.css
+++ b/src/views/DesignEditor/components/Panels/style.module.css
@@ -1,3 +1,9 @@
+.baseSidebarContainer {
+  width: 360px;
+  height: 90vh;
+  background-color: white;
+  overflow: hidden;
+}
 .sliderBtnWrapper {
   display: none;
   top: 50%;
